tests/syntax/good/testfile-func-3.go
package main

func foo(x int,) (int) { return x }
