tests/syntax/bad/testfile-semicolon-1.go
package main
func main() {
  bar(foo(1, 2)
      )
}
